# claude-ltm

./: .gitignore  CLAUDE.md  DESIGN.md  README.md
.claude-plugin/: marketplace.json
.claude/rules/00-quality/: 00-overview.md  01-code-refinement.md  02-testing.md
.claude/rules/01-general/: 00-overview.md  01-tooling.md  02-commit-conventions.md
.claude/rules/02-architecture/: 00-overview.md  01-poeaa-and-layers.md  02-hooks-and-budgets.md
.claude/skills/engram-analyse/: SKILL.md
.claude/skills/engram-context/: SKILL.md
.claude/skills/engram-design/: SKILL.md
.claude/skills/engram-git/: SKILL.md
.claude/skills/engram-plan/: SKILL.md
.claude/skills/engram-poeaa/: SKILL.md
.claude/skills/engram-test/: SKILL.md
.claude/skills/ltm-design/: SKILL.md
.claude/skills/ltm-git/: SKILL.md
plugins/engram/: .mcp.json  pyproject.toml
plugins/engram/.claude-plugin/: plugin.json
plugins/engram/bench/: __init__.py  ab_off_settings.json  dataset.json  eval_code_index.py  mine_corpus.py  replay.py  run_ab.py  run_eval.py  tasks.json  visual_tokens.py
plugins/engram/commands/: memory-viewer.md
plugins/engram/core/: __init__.py  config.py  migrate.py  (+6 more)
plugins/ltm/: .mcp.json  pyproject.toml  requirements.txt
plugins/ltm/.claude-plugin/: plugin.json
plugins/ltm/bench/: ab_off_settings.json  dataset.json  eval_code_index.py  mine_corpus.py  replay.py  run_ab.py  run_eval.py  tasks.json
plugins/ltm/commands/: memory-viewer.md
plugins/ltm/core/: code_symbols.py  config.py  distill.py  drift.py  fusion.py  index_recall.py  indexer.py  project.py  provision.py  recall.py  service.py  store.py  transcript.py  treesitter_symbols.py
plugins/ltm/core/adapters/: fastembed_gw.py  nats_bus.py
plugins/ltm/core/consolidation/: __init__.py  refine.py  scoring.py
plugins/ltm/core/domain/: confidence.py  fusion.py  quantize.py  scoring.py
plugins/ltm/core/index/: code_symbols.py  drift.py  index_recall.py  indexer.py  treesitter_symbols.py
plugins/ltm/core/ports/: __init__.py  distill.py  embedding.py  membus.py
plugins/ltm/core/recall/: __init__.py
plugins/ltm/hooks/: hooks.json
plugins/ltm/skills/memory-recall/: SKILL.md
plugins/ltm/tests/: test_activated_k.py  test_antipatterns.py  test_bench_stats.py  test_capture_content.py  test_consolidation.py  test_hooks.py  test_incremental.py  test_index.py  test_inhibition.py  test_integrate.py  test_mcp.py  test_membus.py  test_nats_bus.py  test_project.py  test_quality.py  test_recall_api.py  test_recovery.py  test_reentrancy.py  test_replay.py  test_smoke.py  test_spreading.py  test_stm.py  test_usage.py  test_viewer.py
plugins/ltm/viewer/: serve.py
(+129 files in other folders)
